neo/manifests/jaeger/01-jaeger.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.20
          imagePullPolicy: Always
          volumeMounts:
            - name: jaeger-storage
              mountPath: /var/lib/jaeger
      volumes:
        - name: jaeger-storage
          persistentVolumeClaim:
            claimName: jaeger-storage
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: jaeger
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
    - port: 5778
      targetPort: 5778
      name: jaeger-agent-config
    - port: 6831
      targetPort: 6831
      name: jaeger-agent-compact
    - port: 6832
      targetPort: 6832
      name: jaeger-agent-binary
    - port: 14250
      targetPort: 14250
      name: jaeger-collector-grpc
    - port: 14268
      targetPort: 14268
      name: jaeger-collector-http
    - port: 16686
      targetPort: 16686
      name: jaeger-ui
  selector:
    app: jaeger

---

# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jaeger-collector-basic-auth
  namespace: jaeger
spec:
  basicAuth:
    secret: authsecret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-collector
  namespace: jaeger
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`jaeger-collector.docker.localhost`)
      middlewares:
        - name: jaeger-collector-basic-auth
          namespace: pilot
      services:
        - name: jaeger
          port: 14268
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ui
  namespace: jaeger
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jaeger-ui.docker.localhost`)
      services:
        - name: jaeger
          port: 16686
